# cooperative_manipulation

./: README.md  publish_human.sh
aerial_mpc/: CMakeLists.txt  package.xml
aerial_mpc/config.gazebo/: forward_kinematics_estimator.yaml  mpc_input_interface.yaml  mpc_output_interface.yaml  mpc_wrapper.traj.yaml  mpc_wrapper.yaml  parameters.csv  trajectory_filter.yaml
aerial_mpc/config.sml/: forward_kinematics_estimator.yaml  mpc_input_interface.yaml  mpc_output_interface.yaml  mpc_wrapper.traj.yaml  mpc_wrapper.yaml  obstacles.yaml  parameters.csv  trajectory_filter.yaml  velocity_integrator.yaml
aerial_mpc/include/: input_interface.h  mpc_wrapper.h  obstacle_detector.h  output_interface.h  pid.h  velocity_integrator.h
aerial_mpc/launch/: mpc_wrapper.launch
aerial_mpc/matlab/: aerialMPC.cpp  aerialModel.m  getAerialAttitude.m  getAerialInputMatrix.m  getAerialJacobian.m  getAerialKinematics.m  hardcoded.mat  makeItWork.m  matlab.mat  setupAerialMPC.m  setupSimulink.m  testPs.m  testState.m
aerial_mpc/matlab/aerial_MPC/: acado_common.h  acado_integrator.c  acado_qpoases3_interface.c  acado_qpoases3_interface.h  acado_solver.c
aerial_mpc/msg/: ObstaclesArray.msg  Trajectory.msg
aerial_mpc/src/: forward_kinematics_estimator.cpp  forward_kinematics_estimator.h  input_interface.cpp  main_input_interface.cpp  main_velocity_integrator.cpp  mpc_wrapper.cpp  obstacle_detector.cpp  output_interface.cpp  pid.cpp  popeye_interface.cpp  popeye_interface.h  traj_input.cpp  trajectory_filter.cpp  trajectory_filter.h  velocity_integrator.cpp
aerial_mpc/src/export_MPC/: acado_common.h  acado_integrator.c  acado_qpoases3_interface.c  acado_qpoases3_interface.h  acado_solver.c
aerial_robot/: CMakeLists.txt  package.xml
aerial_robot/config/: aerial_widowx_controller.yaml  widowx_joint_state.yaml
aerial_robot/include/: aerial_widowx_joint_control.h  aerial_widowx_joint_state.h
aerial_robot/launch/: aerial_widowx_controller.launch  arm.launch  fa_test.launch  neo_arm.launch  neo_base.launch
aerial_robot/meshes/: 14043_16_oz._Beer_Bottle_v1_l3.mtl  Mug.3DS  beer.stl  beer_botle_duff.prt.4  beer_botle_duff.stp  mug.stl
aerial_robot/objects/: beer.urdf  table.urdf
aerial_robot/robots/: arm.xacro.urdf  neo11_base.xacro  neo11_odometry.gazebo  neo_arm.urdf.xacro
aerial_robot/src/: aerial_widowx_joint_control.cpp  aerial_widowx_joint_state.cpp  main_aerial_widowx_joint_control.cpp
aerial_robot/urdf/: ros_controller.urdf.xacro
aerial_robot/urdf/widowx_arm_2/: common_materials.xacro  widowx.transmission.xacro  widowx.urdf.xacro
commander/: CMakeLists.txt  package.xml
commander/config.gazebo/: cooperative_arena.yaml
commander/config.sml/: cooperative_arena.yaml  visual.rviz
commander/include/: commander.h
commander/launch/: aerial_ground_coop.launch  aerial_mpc_controlled.launch  aerial_robot.launch  arena_gazebo.launch  arena_sml.launch  commander.launch  ground_robot.launch  mpc_wrapper.launch  spawn_obstacles.launch  temp.launch
commander/meshes/: beam.dae  beer.dae.new  beer_bottle.dae  box.dae  obstacle.dae  obstacle3.dae
commander/meshes/sourceimages/: Cobblestone_ao.tga  Cobblestone_bc.tga  Cobblestone_h.tga  Cobblestone_n.tga  Cobblestone_r.tga  TexturesCom_Asphalt2_1.5x1.5_1K_roughness.tif  TexturesCom_Pavement_RoadSealed_1K_albedo.tif
commander/msg/: ObstaclesArray.msg
commander/objects/: beer.urdf  obstacles.urdf.xacro  table.urdf  world.urdf
commander/plugins/: print_trajectory.sdf
commander/src/: commander.cpp  commander_gui.cpp  commander_gui.h  main_commander.cpp  main_commander_gui.cpp
commander/urdf/: sphere_obstacle.urdf.xacro
cooperative_manipulation/: CMakeLists.txt  package.xml
easy_gripper/: CMakeLists.txt  package.xml
easy_gripper/easy_schifo/: CMakeLists.txt  package.xml
easy_gripper/include/: easy_gripper.h
easy_gripper/msg/: GripCommand.msg  WrenchArray.msg
easy_gripper/src/: easy_gripper.cpp
ground_mpc/: CMakeLists.txt  nexus_mpc.launch  package.xml
ground_mpc/config.gazebo/: mpc_input_interface.yaml  mpc_output_interface.yaml  mpc_wrapper.yaml  obstacles.yaml  parameters.csv
ground_mpc/config.sml/: master_connect.sh  mpc_input_interface.yaml  mpc_output_interface.yaml  mpc_wrapper.yaml  obstacles.yaml
ground_mpc/include/: input_interface.h  mpc.h  mpc_wrapper.h  output_interface.h
ground_mpc/launch/: mpc_wrapper.launch
ground_mpc/matlab/: collision.m  costCollide.m  getGroundAttitude.m  getGroundInputMatrix.m  getGroundJacobian.m  getGroundKinematics.m  groundModel.m  hardcoded.mat  logAnalysis.m  makeItWork.m  mpc.cpp  mpc_data_acadodata_M1.txt  mpc_data_acadodata_M2.txt  setupGroundMPC.m  setupSimulink.m  testEllipsoid.m  testFunc.m  testState.m
ground_mpc/matlab.doubleint/: groundMPC.cpp  ground_solver.c  ground_solver.mexa64  plotData.m  quickTest.slx  quickTest.slx.autosave  quickTest.slx.original
ground_mpc/matlab.doubleint/ground_MPC/: acado_common.h  acado_qpoases3_interface.h
ground_mpc/matlab/plots/: plotter.m  plotter_cost.m
ground_mpc/msg/: Obstacle.msg  ObstaclesArray.msg  OutputDataMsg.msg
ground_mpc/src/: basic_reference_gen.cpp  input_interface.cpp  joint_measurer.cpp  main_input_interface.cpp  main_mpc_wrapper.cpp  main_obstacle_detector.cpp  main_output_interface.cpp  mpc.cpp  mpc_wrapper.cpp  output_interface.cpp  print_prediction.cpp  simple_publisher.cpp
mpc_wrapper/: CMakeLists.txt  package.xml
mpc_wrapper/config/: mpc_wrapper.yaml
mpc_wrapper/include/: mpc.h  mpc_wrapper.h
mpc_wrapper/launch/: mpc_wrapper.launch
mpc_wrapper/matlab/: getGroundAttitude.m  getGroundJacobian.m  getGroundKinematics.m  hardcoded.mat  mpc.cpp  mpc_data_acadodata_M1.txt  setupGroundMPC.m  setupSimulink.m
mpc_wrapper/matlab.doubleint/: againGroundMPC.slx  genCode.m  genCode.m~  make_ground.m  quickTest.slxc  setupSimulink.m
mpc_wrapper/msg/: InputDataMsg.msg
mpc_wrapper/src/: mpc.cpp  mpc_wrapper.cpp
nexus_robot/: package.xml  (+1 more)
prediction_printer/: CMakeLists.txt  package.xml
prediction_printer/include/: prediction_printer.h
prediction_printer/src/: prediction_printer.cpp
(+66 files in other folders)
