<?xml version="1.0"?>
<package format="2">
  <name>cooperative_manipulation</name>
  <version>0.1.0</version>
  <description>The cooperative_manipulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nicola@todo.todo">nicola</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


<exec_depend>aerial_mpc</exec_depend>
<exec_depend>aerial_robot</exec_depend>
<exec_depend>commander</exec_depend>
<exec_depend>ground_mpc</exec_depend>
<exec_depend>mpc_wrapper</exec_depend>
<exec_depend>nexus_robot</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

	<metapackage />
  </export>
</package>
